--- a/de/webgis-start/index.html
+++ b/de/webgis-start/index.html
@@ -33,6 +33,9 @@
 		margin-bottom:40px;
 	}
   </style>
+  <script type="text/javascript">
+	document.location = "./cloud/index.html";
+  </script>
 </head>
 
 <body>
